--- a/Client/HolaShopping/src/app/holashopping/holashopping.component.html
+++ b/Client/HolaShopping/src/app/holashopping/holashopping.component.html
@@ -1,3 +1,11 @@
-<p>
-  holashopping works!
-</p>
+<div class="layout-wrapper">
+
+  <app-header></app-header>
+  
+    <div id="layout-content">
+        <div>
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
+</div>
